# SIMMIND

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
intro/: pitchsim_hld.html  pitchsim_lld.html  simmind_7day_timeline.html
pitchsim/agents/: agent.py
pitchsim/llm/: mock.py  ollama_mind.py
pitchsim/models/: schemas.py
scripts/: day1_smoke.py
