[project]
name = "pitchsim"
version = "0.0.1"
description = "PitchSim — AI-powered business idea validator (mock-first, free-tier stack)."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.27,<1",
  "networkx>=3.2,<4",
  "langchain-core>=1,<2",
  "langchain-ollama>=1.0,<2",
  "ollama>=0.6,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

